tests/runner/src/snapshots/tlang_test_runner__tests__dispatch_9799_javascript@protocols__protocol_constraints_default_dispatch.tlang.snap
---
source: tests/runner/src/main.rs
description: "Backend: javascript"
expression: "apply_redactions(&output, workspace_root)"
input_file: tests/protocols/protocol_constraints_default_dispatch.tlang
---
warning: Unused function `PartialEq::eq/2`
   ┌─ [WORKSPACE_ROOT]/tests/protocols/protocol_constraints_default_dispatch.tlang:26:3
   │
26 │   fn eq(a, b) { a.n == b.n }
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: Unused function `Ord::cmp/2`
   ┌─ [WORKSPACE_ROOT]/tests/protocols/protocol_constraints_default_dispatch.tlang:32:3
   │  
32 │ ╭   fn cmp(a, b) {
33 │ │     if a.n < b.n { -1 }
34 │ │     else if a.n > b.n { 1 }
35 │ │     else { 0 }
36 │ │   }
   │ ╰───^

[stdin]:636
    return !self.eq(other);
                 ^

TypeError: self.eq is not a function
    at Object.neq ([stdin]:636:18)
    at #call ([stdin]:43:19)
    at $Protocol.neq ([stdin]:35:41)
    at [stdin]:667:17
    at runScriptInThisContext (node:internal/vm:218:10)
    at node:internal/process/execution:456:12
    at [stdin]-wrapper:6:24
    at runScriptInContext (node:internal/process/execution:454:60)
    at evalFunction (node:internal/process/execution:286:30)
    at evalTypeScript (node:internal/process/execution:298:3)

Node.js v24.0.2
